--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
         "@tsconfig/svelte": "^2.0.1",
+        "less": "^4.1.2",
         "sass": "^1.43.4",
         "svelte": "^3.37.0",
         "svelte-check": "^2.1.0",
         "svelte-preprocess": "^4.9.8",
+        "svelte-preprocess-less": "^0.4.0",
         "tslib": "^2.2.0",
         "typescript": "^4.3.2",
         "vite": "^2.6.4"
