--- a/server/pom.xml
+++ b/server/pom.xml
@@ -100,6 +100,11 @@
             <artifactId>koin-logger-slf4j</artifactId>
             <version>3.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>1.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
