--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
         "@tsconfig/svelte": "^2.0.1",
+        "@types/lodash": "^4.14.178",
         "less": "^4.1.2",
+        "lodash": "^4.17.21",
         "sass": "^1.43.4",
         "svelte": "^3.37.0",
         "svelte-check": "^2.1.0",
